fix dark mode color

--- a/app/globals.css
+++ b/app/globals.css
@@ -79,13 +79,13 @@
 }
 
 .dark {
-  --background: #004746;
-  --foreground: #00706e;
-  --card: oklch(0.205 0 0);
+  --background: #002e2d;
+  --foreground: #001f1f;
+  --card: #001f1f;
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0.205 0 0);
   --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.922 0 0);
+  --primary: #014745;
   --primary-foreground: oklch(0.205 0 0);
   --secondary: #ffffff;
   --secondary-foreground: oklch(0.985 0 0);
